correcting http://www.yaml.de

--- a/characteristics.html
+++ b/characteristics.html
@@ -191,7 +191,7 @@
 <footer>
     <div class="ym-wrapper">
         <div class="ym-wbox">
-            <p>Layout based on <a href="https://www.yaml.de">YAML</a></p>
+            <p>Layout based on <a href="http://www.yaml.de">YAML</a></p>
         </div>
     </div>
 </footer>
